syntax ="proto3";

package greeting;

option java_package ="com.proto.greeting";
option java_multiple_files = true;

message SqrtRequest{
  int32 number = 1;
}

message SqrtResponse {
  double result = 1;
}